laying down basis for a project

--- a/LPP/LPP.csproj
+++ b/LPP/LPP.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="INode.cs" />
     <Compile Include="Nodes\BiImplicationNode.cs" />
     <Compile Include="Nodes\ConjunctionNode.cs" />
     <Compile Include="Nodes\DisjunctionNode.cs" />
@@ -59,6 +60,7 @@
     <Compile Include="Nodes\ImplicationNode.cs" />
     <Compile Include="Nodes\Node.cs" />
     <Compile Include="Nodes\NotNode.cs" />
+    <Compile Include="Processor.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
