--- a/LPP/LPP.csproj
+++ b/LPP/LPP.csproj
@@ -59,6 +59,7 @@
     </Compile>
     <Compile Include="Helper Classes\Functions.cs" />
     <Compile Include="Helper Classes\Graphiz.cs" />
+    <Compile Include="Nodes\NandNode.cs" />
     <Compile Include="TruthTable\RowCombination.cs" />
     <Compile Include="INode.cs" />
     <Compile Include="Nodes\BiImplicationNode.cs" />
