--- a/LPP/LPP.csproj
+++ b/LPP/LPP.csproj
@@ -64,6 +64,7 @@
     </Compile>
     <Compile Include="Helper Classes\Functions.cs" />
     <Compile Include="Helper Classes\Graphiz.cs" />
+    <Compile Include="Helper Classes\TableuxDrawer.cs" />
     <Compile Include="Nodes\NandNode.cs" />
     <Compile Include="TruthTable\RowCombination.cs" />
     <Compile Include="INode.cs" />
@@ -78,6 +79,7 @@
     <Compile Include="Processor.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TruthTable\Tableux.cs" />
     <Compile Include="TruthTable\TruthTable.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
