--- a/LPP/LPP.csproj
+++ b/LPP/LPP.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TruthTable\Tableux.cs" />
+    <Compile Include="TruthTable\TableuxNode.cs" />
     <Compile Include="TruthTable\TruthTable.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
