more unit tests added

--- a/Unit Tests/Unit Tests.csproj
+++ b/Unit Tests/Unit Tests.csproj
@@ -42,8 +42,10 @@
         </Reference>
     </ItemGroup>
     <ItemGroup>
+        <Compile Include="FunctionsTests.cs" />
         <Compile Include="ProcessorTests.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
+        <Compile Include="TruthTableTests.cs" />
     </ItemGroup>
     <ItemGroup>
       <ProjectReference Include="..\LPP\LPP.csproj">
