--- a/LPP/LPP.csproj
+++ b/LPP/LPP.csproj
@@ -55,6 +55,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Custom Exception\InputException.cs" />
     <Compile Include="Helper Classes\CartesianProductHelper.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -112,7 +113,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
